@@ -66,14 +66,6 @@ class Image
 		}
 	}
 
-	/**
-	 * Obsolete factory function, use constructor
-	 * @deprecated
-	 */
-	function newFromTitle( $title ) {
-		return new Image( $title );
-	}
-
 	function Image( $title ) {
 		if( !is_object( $title ) ) {
 			throw new MWException( 'Image constructor given bogus title.' );
